--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,7 +22,7 @@
     ],
     "no-console": "off",
     "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-unused-vars": ["warn"],
     "@typescript-eslint/no-empty-function": ["off"]
   }
 }
