--- a/server/package.json
+++ b/server/package.json
@@ -3,20 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon --config nodemon.json src/app.ts"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "17.0.0",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.6.2",
+    "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^8.6.0",
     "eslint-plugin-import": "2.x",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
-    "eslint": "^8.6.0"
+    "typescript": "^4.6.2"
   }
 }
