--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.26.0",
     "eslint": "^8.6.0",
     "express": "^4.17.3",
     "prettier": "^2.5.1",
